Fix dashboard-item selected background color not showing rightly

--- a/src/app/dashboard/dashboard-item/dashboard-item.component.scss
+++ b/src/app/dashboard/dashboard-item/dashboard-item.component.scss
@@ -21,5 +21,9 @@
 }
 
 .selected {
-    background-color: aqua;
+    --background: indianred;
+}
+
+.selected > ion-item {
+    --background: indianred;
 }
